progs/tests/conflict_markers_other_file.sy
use conflict_markers

start :: fn {}

// error: Error::GitConflictError { span: Span { line: 3 , .. }, .. }
